assets/cluster-monitoring-operator/network-policy-downstream.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: cluster-monitoring-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: allow-all-cluster-monitoring-operator
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
